LOGS/STATS.err
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/STATS.py", line 1, in <module>
    from py_env_train import *
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/py_env_train.py", line 7, in <module>
    import func_train
  File "/p/project1/cesmtst/patakchiyousefi1/CODES-MS3/FORECASTLEAD/func_train.py", line 408
    if type_ == "unet-s-dw":
                            ^
IndentationError: unindent does not match any outer indentation level
srun: error: jwb0425: task 0: Exited with exit code 1
